# OpenPulseConverter

./: .gitignore  CMakeLists.txt  ExponentialFilter.h  InputTypes.h  LICENSE  OPGData.h  OldImpl.cpp  OneEuroFilter.cpp  OpenPulseConverter.cpp  OpenPulseConverter.sln  OpenPulseConverter.vcxproj  OpenPulseConverter.vcxproj.filters  OpenPulseConverterSingleton.cpp  README.md
dependencies/hidapi/include/: OneEuroFilter.h
scripts/: build.sh  configure.sh
src/: OpenPulseConverterSingleton.cpp
x64/Debug/: OpenPulseConverter.exe.recipe  OpenPulseConverter.ilk  OpenPulseConverter.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/OpenPuls.0d0ffb40.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenPulseConverter.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
